--- a/style.css
+++ b/style.css
@@ -7,8 +7,15 @@
 body{
     font-family: 'Mukta', sans-serif;
 }
+
+/*First page style start*/
+.first_page{
+    height: 100vh;
+    background-image: url(images/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 navbar{
-    background-color: rgba(112, 106, 106, 0.493);
     display: inline-block;
     height: 40px;
     width: 100%;
@@ -20,32 +27,123 @@ navbar{
 navbar a{
     text-decoration: none;
     font-size: 20px;
-    color: white;
-}
-navbar a:hover{
     color: black;
+    box-shadow: 5px 5px 40px gray;
+    font-weight: 600;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .summry{
     width: 800px;
     height: 400px;
-    background-color: mediumpurple;
     margin: 0 auto;
     margin-top: 130px;
     display: flex;
     position: relative;
+    box-shadow: 15px 15px 50px 10px gray;
+    border-radius: 5px;
+    border-left: 4px solid;
+    border-image: linear-gradient(white,rgb(223, 135, 150));
+    border-image-slice: 1;
 }
 .show1{
     width: 50%;
-    background-color: rgb(73, 73, 146);
-}
-.show2{
-    position: relative;
-    width: 50%;
-    background-color: midnightblue;
 }
 .show1 img{
     position: absolute;
     border-radius: 350px;
-    top:35px;
-    left: 2px;
+    top:40px;
+    
 }
+.show2{
+    position: relative;
+    width: 50%;
+    padding-top: 40px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.show2 h1{
+    font-size: 40px;
+    color: rgb(16, 59, 59);
+    text-shadow:2px 2px 4px gray
+}
+.show2 h3{
+    font-size: 30px;
+    text-shadow: 2px 2px white;
+}
+.show2 p{
+    font-size: 18px;
+    font-weight: 600;
+    text-align: justify;
+    letter-spacing: 1px;
+    text-shadow: 1px 1px 2px white;
+}
+.social_logo{
+    margin-top: 5px;
+}
+.social_logo i{
+    font-size: 30px;
+    padding: 15px;
+}
+.f i{
+    color: blue;
+}
+.ff i{
+    color: rgb(43, 43, 158);
+}
+.fff i{
+    color: rgb(173, 80, 57);
+}
+.ff1 i{
+    color: rgb(190, 14, 14);
+}
+
+/* ===============First page style end====================  */
+
+.about_me{
+    background-image: linear-gradient(0,0,0,0.5);
+    background-size: cover;
+    display:flex;
+    width: 100%;
+    height: 600px;
+    align-items: center;
+    background-color:#0a0a0ae8;
+}
+.image{
+    width: 40%;
+}
+.image img{
+    margin-left: 40px;
+    padding-left: 50px;
+    border-radius: 10px;
+}
+.text_part{
+    width: 60%;
+}
+.text_part h1{
+    text-align: center;
+    font-size: 40px;
+    text-shadow: 2px 2px 4px white;
+}
+hr{
+    height: 8px;
+    background-color:darkgray;
+    border-style: none;
+    width: 50%;
+    margin-bottom: 50px;
+    margin-left:230px;
+    border-radius: 5px;
+}
+.text_part p{
+    font-size: 20px;
+    padding-left: 5px;
+    padding-right: 15px;
+    text-align: justify;
+    margin-bottom: 50px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+
