Exprience part complete

--- a/style.css
+++ b/style.css
@@ -89,10 +89,10 @@ navbar a{
     color: blue;
 }
 .ff i{
-    color: rgb(43, 43, 158);
+    color: rgb(173, 80, 57);
 }
 .fff i{
-    color: rgb(173, 80, 57);
+    color: rgb(43,43,158);
 }
 .ff1 i{
     color: rgb(190, 14, 14);
@@ -145,5 +145,106 @@ hr{
     color: white;
     text-shadow: 2px 2px 2px black;
 }
+.text_part a{
+    background-color: r#0a0a0ae8;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 18px;
+    border-radius: 10px;
+    color: rgba(255, 255, 255, 0.658);
+    box-shadow: -2px -2px 2px rgba(255, 255, 255,0.1),
+                2px 2px 2px rgba(0,0,0,0.2),
+                inset -2px -2px 2px rgba(255, 255, 255,0.1),
+                inset 2px 2px 2px rgba(0,0,0,0.2);
+
+}
+.text_part a:hover{
+    box-shadow: inset 2px 2px 2px rgba(0,0,0,0.2),
+    inset -2px -2px 2px rgba(255, 255, 255,0.1),
+    inset 2px 2px 2px rgba(0,0,0,0.2),
+    inset -2px -2px 2px rgba(255, 255, 255,0.1);
+
+}
+
+/*====exprience part style===*/
+.exprience h1{
+    margin-top: 30px;
+    text-align: center;
+    font-size: 40px;
+    color: darkslategray;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 2px rgba(128, 128, 128, 0.863);
+
+}
+.exprience hr{
+    height: 8px;
+    background-color:darkgray;
+    border-style: none;
+    width: 50%;
+    margin-bottom: 50px;
+    margin-left:380px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px black;
+}
+.flex_part1{
+    display: flex;
+    position: relative;
+}
+.card1{
+    position: absolute;
+    width: 30%;
+    height: 300px;
+    top:left;
+    top: 50px;
+    left: 250px;
+    box-shadow: 5px 5px 40px gray;
+    border: 2px solid gray;
+}
+.card2{
+    position: absolute;
+    width: 30%;
+    height: 300px;
+    top: 320px;
+    left: 800px;
+    box-shadow: 5px 5px 40px gray;
+    border: 2px solid gray;
+    
+}
+.card1 h2{
+    text-align: center;
+    font-size: 26px;
+    padding-top: 10px;
+    color: crimson;
+    text-shadow: 2px 2px 2px gray;
+}
+.card1 h4{
+    padding-left: 10px;
+    padding-top: 10px;
+}
+.card1 p{
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 18px;
+    text-align: justify;
+}
+
+.card2 h2{
+    text-align: center;
+    font-size: 26px;
+    padding-top: 10px;
+    color: crimson;
+    text-shadow: 2px 2px 2px gray;
+}
+.card2 h4{
+    padding-left: 10px;
+    padding-top: 10px;
+}
+.card2  p{
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 18px;
+    text-align: justify;
+}
+
 
 
